website/versioned_docs/0.36/headless-js-android.md
---
id: version-0.36-headless-js-android
title: headless-js-android
original_id: headless-js-android
---
<a id="content"></a><h1><a class="anchor" name="headless-js"></a>Headless JS <a class="hash-link" href="docs/headless-js-android.html#headless-js">#</a></h1><div><p>Headless JS is a way to run tasks in JavaScript while your app is in the background. It can be used, for example, to sync fresh data, handle push notifications, or play music.</p><h2><a class="anchor" name="the-js-api"></a>The JS API <a class="hash-link" href="docs/headless-js-android.html#the-js-api">#</a></h2><p>A task is a simple async function that you register on <code>AppRegistry</code>, similar to registering React applications:</p><div class="prism language-javascript">AppRegistry<span class="token punctuation">.</span><span class="token function">registerHeadlessTask<span class="token punctuation">(</span></span><span class="token string">'SomeTaskName'</span><span class="token punctuation">,</span> <span class="token punctuation">(</span><span class="token punctuation">)</span> <span class="token operator">=</span><span class="token operator">&gt;</span> <span class="token function">require<span class="token punctuation">(</span></span><span class="token string">'SomeTaskName'</span><span class="token punctuation">)</span><span class="token punctuation">)</span><span class="token punctuation">;</span></div><p>Then, in <code>SomeTaskName.js</code>:</p><div class="prism language-javascript">module<span class="token punctuation">.</span>exports <span class="token operator">=</span> async <span class="token punctuation">(</span>taskData<span class="token punctuation">)</span> <span class="token operator">=</span><span class="token operator">&gt;</span> <span class="token punctuation">{</span>
 <span class="token comment" spellcheck="true"> // do stuff
</span><span class="token punctuation">}</span></div><p>You can do anything in your task as long as it doesn't touch UI: network requests, timers and so on. Once your task completes (i.e. the promise is resolved), React Native will go into "paused" mode (unless there are other tasks running, or there is a foreground app).</p><h2><a class="anchor" name="the-java-api"></a>The Java API <a class="hash-link" href="docs/headless-js-android.html#the-java-api">#</a></h2><p>Yes, this does still require some native code, but it's pretty thin. You need to extend <code>HeadlessJsTaskService</code> and override <code>getTaskConfig</code>, e.g.:</p><div class="prism language-javascript">public class <span class="token class-name">MyTaskService</span> extends <span class="token class-name">FbHeadlessJsTaskService</span> <span class="token punctuation">{</span>

  @Override
  protected @Nullable HeadlessJsTaskConfig <span class="token function">getTaskConfig<span class="token punctuation">(</span></span>Intent intent<span class="token punctuation">)</span> <span class="token punctuation">{</span>
    Bundle extras <span class="token operator">=</span> intent<span class="token punctuation">.</span><span class="token function">getExtras<span class="token punctuation">(</span></span><span class="token punctuation">)</span><span class="token punctuation">;</span>
    <span class="token keyword">if</span> <span class="token punctuation">(</span>extras <span class="token operator">!</span><span class="token operator">=</span> <span class="token keyword">null</span><span class="token punctuation">)</span> <span class="token punctuation">{</span>
      <span class="token keyword">return</span> <span class="token keyword">new</span> <span class="token class-name">HeadlessJsTaskConfig</span><span class="token punctuation">(</span>
          <span class="token string">"SomeTaskName"</span><span class="token punctuation">,</span>
          Arguments<span class="token punctuation">.</span><span class="token function">fromBundle<span class="token punctuation">(</span></span>extras<span class="token punctuation">)</span><span class="token punctuation">,</span>
          <span class="token number">5000</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
    <span class="token punctuation">}</span>
    <span class="token keyword">return</span> <span class="token keyword">null</span><span class="token punctuation">;</span>
  <span class="token punctuation">}</span>
<span class="token punctuation">}</span></div><p>Now, whenever you <a href="https://developer.android.com/reference/android/content/Context.html#startService(android.content.Intent)" target="_blank">start your service</a>, e.g. as a periodic task or in response to some system event / broadcast, JS will spin up, run your task, then spin down.</p><h2><a class="anchor" name="caveats"></a>Caveats <a class="hash-link" href="docs/headless-js-android.html#caveats">#</a></h2><ul><li>By default, your app will crash if you try to run a task while the app is in the foreground. This is to prevent developers from shooting themselves in the foot by doing a lot of work in a task and slowing the UI. There is a way around this.</li><li>If you start your service from a <code>BroadcastReceiver</code>, make sure to call <code>HeadlessJsTaskService.acquireWakelockNow()</code> before returning from <code>onReceive()</code>.</li></ul></div><div class="docs-prevnext"><a class="docs-prev" href="docs/native-components-android.html#content">← Prev</a><a class="docs-next" href="docs/running-on-device-android.html#content">Next →</a></div><p class="edit-page-block">You can <a target="_blank" href="https://github.com/facebook/react-native/blob/master/docs/HeadlessJSAndroid.md">edit the content above on GitHub</a> and send us a pull request!</p>